# ame

./: .gitignore  README.md  main.py  pyproject.toml  rxconfig.py
api_app/: main.py
api_app/database/: database.py
api_app/models/: models.py
api_app/routers/: anime.py  auth.py  manga.py  reviews.py  search.py  users.py
